# MIA-VPC-III

./: .gitignore  Makefile  README.md  mobilevit_colab_tf_flowers.ipynb  pyproject.toml  requirements.txt
hf_space/: Dockerfile  README.md  app.py  requirements.txt
hf_space/.streamlit/: config.toml
hf_space/model/: preprocessor_config.json
mia_vpc_iii/: __init__.py  app.py  dataset.py  features.py  plots.py  save_demo_images.py
mia_vpc_iii/modeling/: predict.py  train.py
mobilevit-small-tf-flowers-final-colab/: config.json
models/mobilevit-small-tf-flowers-final/: config.json
models/mobilevit_xxs_models/: mobilevit_xxs.tflite
models/mobilevit_xxs_models/mobilevit_xxs/: fingerprint.pb  saved_model.pb
models/mobilevit_xxs_models/mobilevit_xxs/variables/: variables.index
notebooks/: mobilevit.ipynb  mobilevit_colab_tf_flowers.ipynb  mobilevit_xxs_full_training.ipynb
tests/: test_data.py
