[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mia_vpc_iii"
version = "0.0.1"
description = "MobileViT and TensorFlow Flowers experiments for MIA VPC III."
authors = [
  { name = "Lucas Didone" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["mia_vpc_iii"]
include = ["pyproject.toml", "mia_vpc_iii/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mia_vpc_iii"]
force-sort-within-sections = true

